# smt-transactional-consistency-artifact

./: .clang-tidy  .gitignore  .gitmodules  Experiment.md  LICENSE  README.md  TODO.md  flake.nix  grubis.nouv.cycle  grw.nouv.cycle  gwh.nouv.cycle  meson.build
docs/: README.md
history/: delete_macos_fslog.sh
reports/: 20230203-naive-checker.org
results/: PK-all.json  chengRW-am-prune-pc-cache-key-known-mem.json  chengRW-am-prune-pc-cache-key.json  chengRW-base-fp-pc-wrcp-926.json  chengRW-base-np-pc-wrcp-926.json  chengRW-dbcop.json  chengRW-mono-fp-926.json  chengRW-mono-prune.json  chengRW-ours.json  general-NuSerMono-926.json  general-PK.json  general-heutopo.json  key-w-o1-unbounded-2.json  key-w-o1-unbounded-complete.json  key-w-o1-unbounded-prop.json  key-w-o1.json  key-wo-o1-2.json  key-wo-o1-unbounded-complete.json  key-wo-o1.json  mem-w-o1-unbounded.json  mem-wo-o1-unbounded.json  memory-w-o1-unbounded-complete-many.json  memory-w-o1-unbounded-complete.json  memory-w-o1-unbounded-complete2.json  memory-wo-o1-unbounded-complete-many.json  memory-wo-o1-unbounded-complete.json  memory-wo-o1-unbounded-complete2.json  new-general.json  o1-w-o1-unbounded.json  o1-wo-o1-unbounded.json  oopsla19-base-fp-pc-wrcp-roachdb-all-writes.json  op-w-o1-unbounded.json  op2-w-o1-unbounded.json  pf7-base-np-pc-wrcp-926.json  pf7-base-pc-926.json  pf7-base-pc.json  pf7-mono-np-926.json  pf7-mono-prune-926.json  pf7-mono-prune.json  repeat-ratio-0.5.json  (+26 more)
results/data-1715612385.3625543/: mem-evts.csv  mem-readpct.csv  mem-sessions.csv  mem-txns.csv  mem-zipf_s.csv  runtime-evts.csv  runtime-readpct.csv  runtime-sessions.csv  runtime-txns.csv  runtime-zipf_s.csv
results/data-1715647991.6085017/: mem-evts.csv  mem-readpct.csv  mem-sessions.csv  mem-txns.csv  mem-zipf_s.csv  runtime-evts.csv  runtime-readpct.csv  runtime-sessions.csv  runtime-txns.csv  runtime-zipf_s.csv
results/data-1715843286.4403348/: mem-evts.csv  mem-readpct.csv  mem-sessions.csv  mem-txns.csv  mem-zipf_s.csv  runtime-evts.csv  runtime-readpct.csv  runtime-sessions.csv  runtime-txns.csv  runtime-zipf_s.csv
results/data-1715849345.9907036/: mem-evts.csv  mem-readpct.csv  mem-sessions.csv  mem-txns.csv  mem-zipf_s.csv  runtime-evts.csv  runtime-readpct.csv  runtime-sessions.csv  runtime-txns.csv  runtime-zipf_s.csv
results/data-1715873733.6803954/: mem-evts.csv  mem-readpct.csv  mem-sessions.csv  mem-txns.csv  mem-zipf_s.csv  runtime-evts.csv  runtime-readpct.csv  runtime-sessions.csv  runtime-txns.csv  runtime-zipf_s.csv
results/new-opt/: PK-partition.json  general-PK.json  general.json  various+ours-heudist.json  various+ours-mono.json  various-baseline.json  various-ours-mono.json
results/old/: chengRW-am-prune-pc-cache-key-known.json  chengRW-am-prune-pc-cache.json  pf7-am-prune-cache-key-known-mem.json  pf7-base-pc-sma.json  pf7-base-pc-smi.json  pf7-base-pc-wrcp-926.json  pf7-base-pc-wrcp.json  uvd-am-prune-pc-cache-key.json
results/pf7-ablation-926/: mem-evts.csv  mem-keys.csv  mem-readpct.csv  mem-repeatpct.csv  mem-sessions.csv  mem-txns.csv  runtime-evts.csv  runtime-keys.csv  runtime-readpct.csv  runtime-repeatpct.csv  runtime-sessions.csv  runtime-txns.csv
results/pf7-am-mono/: mem-evts.csv  mem-keys.csv  mem-readpct.csv  mem-repeatpct.csv  mem-sessions.csv  mem-txns.csv  runtime-evts.csv  runtime-keys.csv  runtime-readpct.csv  runtime-repeatpct.csv  runtime-sessions.csv  runtime-txns.csv
results/pf7-am-mono-926/: mem-evts.csv  mem-keys.csv  mem-readpct.csv  mem-repeatpct.csv  mem-sessions.csv  mem-txns.csv  runtime-evts.csv  runtime-keys.csv  runtime-readpct.csv  runtime-repeatpct.csv  runtime-sessions.csv  runtime-txns.csv
results/thesis/: chengRW-mono-np-926.json  general-NuSer-926.json  oopsla19-base-fp-pc-wrcp-roachdb-partition-writes.json  pf7-base-fp-926.json  pf7-base-fp-pc-926.json  pf7-base-fp-pc-wrcp-926.json  pf7-base-np-926.json  pf7-mono-fp-926.json  scalability3-NuSer-926.json  scalability4-NuSer-926.json  uvd-NuSer-926.json  uvd-SERSolver-926.json  uvd-base-np-pc-wrcp-926.json  uvd-dbcop-926.json  uvdminus-dbcop-926.json
results/uvd/: mem-evts.csv  mem-keys.csv  mem-sessions.csv  mem-txns-stress.csv  mem-txns.csv  runtime-evts.csv  runtime-keys.csv  runtime-sessions.csv  runtime-txns-stress.csv  runtime-txns.csv
results/uvd-minus/: mem-evts.csv  mem-keys.csv  mem-sessions.csv  mem-txns.csv  runtime-evts.csv  runtime-keys.csv  runtime-sessions.csv  runtime-txns.csv
results/various-all/: mem-evts.csv  mem-readpct.csv  mem-sessions.csv  mem-txns.csv  mem-zipf_s.csv  runtime-evts.csv  runtime-readpct.csv  runtime-sessions.csv  runtime-txns.csv  runtime-zipf_s.csv
results/various-ours-baseline/: mem-evts.csv  mem-readpct.csv  mem-sessions.csv  mem-txns.csv  runtime-evts.csv  runtime-readpct.csv  runtime-sessions.csv  runtime-txns.csv
results/various-ours-baseline-new/: mem-evts.csv  mem-readpct.csv  mem-sessions.csv  mem-txns.csv  runtime-evts.csv  runtime-readpct.csv  runtime-sessions.csv  runtime-txns.csv
scripts/: README.md  analyse-oopsla19.py  gen_history.py  gen_history_plus.py  reproduce-pf7.py  reproduce-uvd.py  reproduce-various.py  reproduce.py  requirements.txt  requirements2.txt  test-case-props.py  test-general-list-append.py  test-general.py  test-list-append.py  test-multithread-SERSolver.py  test-multithread-dbcop.py  test-multithread-multihist.py  test-multithread.py  test-polysi-fig7.py  test-ser.py  test-si.py  test-viper-fig8.py  test.py
scripts/edn2txt/: edn2json.py  edn2txt.py  ours-list-append.edn  ours-list-append.txt  sample.edn  sample.txt  viper-fig9-10s.txt
scripts/gen_extreme/: 2_1000_20_ex.txt  gen  gen.cpp  history.bincode  meduim.history.bincode  small.history.bincode  small2.history.bincode  small3.history.bincode  small4.history.bincode
scripts/samples/: dynamic_progress.py  live_progress.py  multi-thread-sample.py  multi-thread-sample2.py  multi-thread-sample3.py  progress.py  table.py  watch_memory.py
src/: main.cpp  meson.build
src/api/: meson.build  smtchecker.cpp  smtchecker.h
src/history/: constraint.cpp  history.h  (+5 more)
(+13686 files in other folders)
